turmites.lessons.turmites.turmitecreator.TurmiteCreator.scala.error
Turmite:68: error: state  is already defined as variable state
var state = 0;
    ^Turmite:-14: error: ambiguous reference to overloaded definition,
both method state in class Turmite of type => Int
and  method state in class Turmite of type => Int
match expected type Int
				setBrushColor(colors( rule(state)(currentColor)(NEXT_COLOR) ));
                                                           ^Turmite:-10: error: ambiguous reference to overloaded definition,
both method state in class Turmite of type => Int
and  method state in class Turmite of type => Int
match expected type Int
				rule(state)(currentColor)(NEXT_MOVE) match {
                                     ^Turmite:-4: error: ambiguous reference to overloaded definition,
both method state in class Turmite of type => Int
and  method state in class Turmite of type => Int
match expected type Int
				case _      => getGame().getLogger().log("Unknown turn command associated to i="+currentColor+": "+rule(state)(currentColor)(NEXT_MOVE));
                                                                                                                                        ^Turmite: error: ambiguous reference to overloaded definition,
both method state in class Turmite of type => Int
and  method state in class Turmite of type => Int
match expected type ?
				state = rule(state)(currentColor)(NEXT_STATE);
                                ^Turmite:74: error: ambiguous reference to overloaded definition,
both method state in class Turmite of type => Int
and  method state in class Turmite of type => Int
match expected type Int
  val e = rule(state)(i)
               ^Turmite:78: error: ambiguous reference to overloaded definition,
both method state in class Turmite of type => Int
and  method state in class Turmite of type => Int
match expected type ?
    case 0 => co = colors(e(0));state = e(2);
                                ^Turmite:79: error: ambiguous reference to overloaded definition,
both method state in class Turmite of type => Int
and  method state in class Turmite of type => Int
match expected type ?
    case 1 => co = colors(e(0));state = e(2);;avance()
                                ^Turmite:80: error: ambiguous reference to overloaded definition,
both method state in class Turmite of type => Int
and  method state in class Turmite of type => Int
match expected type ?
    case 2 => co = colors(e(0));state = e(2);gauche();avance()
                                ^Turmite:81: error: ambiguous reference to overloaded definition,
both method state in class Turmite of type => Int
and  method state in class Turmite of type => Int
match expected type ?
    case 4 => co = colors(e(0));state = e(2);droite();droite();avance()
                                ^Turmite:82: error: ambiguous reference to overloaded definition,
both method state in class Turmite of type => Int
and  method state in class Turmite of type => Int
match expected type ?
    case 8 => co = colors(e(0));state = e(2);droite();avance()
                                ^Turmite:68: error: method state_= is defined twice
  conflicting symbols both originated in file 'plm.runtime165.Turmite'
var state = 0;
    ^Turmite:68: error: method state is defined twice
  conflicting symbols both originated in file 'plm.runtime165.Turmite'
var state = 0;
    ^